pull request comments resolved, few layout issues fixed, responsive

--- a/homepage/style/homepagestyle.css
+++ b/homepage/style/homepagestyle.css
@@ -16,7 +16,7 @@ header {
 	left: 0;
 	right: 0;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	box-shadow: 0 7px 10px -9px black;
 }
 
@@ -26,13 +26,25 @@ header > div {
 	margin-top: 13px;
 }
 
+header div:nth-child(1) img:nth-child(1) {
+	margin-left: 10px; 
+}
+
+header div:nth-child(2) img:nth-child(1) {
+	margin-left: 80px;
+}
+
+header div:nth-child(3) img:nth-child(1) {
+	margin-left: 145px;
+}
+
 /*HOME logo*/
 
 #dropdownContainer {
 	width: 200px;
 	flex-direction: column;
 	position: relative;
-	right: 250px;
+	right: 130px;
 	top: 45px;
 	background-color: #C8CCCE;
 	border-radius: 10px;
@@ -43,7 +55,7 @@ header > div {
 #myProfileArrow {
 	top: 38px;
 	transform: rotate(45deg);
-	right: 143px;
+	right: 23px;
 	position: relative;
 	flex: none;
 	width: 10px;
@@ -295,12 +307,12 @@ header div:nth-child(3) {
 	font-size: 16px;
 }
 
-.namehandle span:nth-child(4) {
+/*.namehandle span:nth-child(4) {
 	content: url(../img/downarrow.svg);
 	width: 20px;
 	margin-left: 350px;
 	cursor: pointer;
-}
+}*/
 
 .postcontent {
 	display: flex;
@@ -409,4 +421,51 @@ header div:nth-child(3) {
 
 .logoutButton:hover {
 	background-color: #E1E8ED;
+}
+
+@media screen and (max-width: 600px) {
+	.leftcontainer {
+		visibility: hidden;
+	}
+	.rightcontainer {
+		width: 180%;
+		margin-left: 0;
+	}
+	.tweetbar {
+		width: 80%;
+	}
+	.tweetTextBox {
+		width: 300px;
+	}
+	.whatshappening {
+		margin-right: 60px;
+	}
+	.rightbottom {
+		width: 365px;
+		margin-right: 40px;
+	}
+	#dropdownContainer {
+		width: 100px;
+		flex-direction: column;
+		position: relative;
+		right: 80px;
+		top: 45px;
+		background-color: #C8CCCE;
+		border-radius: 10px;
+		cursor: pointer;
+		box-shadow: 0 3px 15px -2px #000;
+	}
+
+	#myProfileArrow {
+		top: 38px;
+		transform: rotate(45deg);
+		right: 23px;
+		position: relative;
+		flex: none;
+		width: 10px;
+		height: 10px;
+		border-top: 2px solid #C8CCCE;
+		border-left: 2px solid #C8CCCE;
+		background-color: #C8CCCE;
+	}
 }
